disable scroll on canvas for mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,7 @@ body {
   color: var(--foreground);
   font-family: var(--font-sans), Arial, Helvetica, sans-serif;
 }
+
+canvas {
+  touch-action: none;
+}
