migrated responsive buttons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,7 +51,7 @@
   /* Theme variables will be set dynamically */
   --background: var(--white);
   --foreground: var(--gray-900);
-  --primary: var(--blue-600);
+  --primary: var(--black);
   --primaryForeground: var(--white);
   --secondary: var(--gray-100);
   --secondaryForeground: var(--gray-600);
@@ -78,11 +78,32 @@
 
   overflow-x: hidden;
 }
+
 :root:has(.no-doc-scroll) {
   overflow: hidden;
 }
 
-@theme inline {
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #ededed;
+  }
+}
+
+body {
+  background: var(--background);
+  color: var(--foreground);
+  font-family: var(--font-sans), Arial, Helvetica, sans-serif;
+}
+
+::selection {
+  background-color: var(--highlight-bg);
+  color: var(--highlight-fg);
+}
+
+@theme {
+  --font-display: "Satoshi", "sans-serif";
+  
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-primary: var(--primary);
@@ -106,29 +127,10 @@
   --color-success-foreground: var(--successForeground);
   --color-warning: var(--warning);
   --color-warning-foreground: var(--warningForeground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: var(--font-sans), Arial, Helvetica, sans-serif;
-}
-
-::selection {
-  background-color: var(--highlight-bg);
-  color: var(--highlight-fg);
 }
 
 @layer base {
+
   input, textarea {
     outline: none;
     padding: 2px 4px;
@@ -144,11 +146,122 @@ body {
     font-family: var(--font-overused-grotesk);
     cursor: pointer;
   }
+
+  canvas {
+    touch-action: none;
+  }
 }
 
-canvas {
-  touch-action: none;
+@layer components {
+  .navlink {
+    font-family: var(--font-body);
+    font-weight: 500;
+    color: black;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  
+  .social-link {
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
+  .social-link:hover {
+    color: rgb(147, 51, 234);
+  }
+  
+  .hover-slide-line {
+    position: relative;
+    overflow: hidden;
+  }
+  .hover-slide-line::before {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 2px;
+    background-color: var(--foreground);
+    transition-property: transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 200ms;
+    transform: translateX(-101%);
+  }
+  .hover-slide-line:hover::before {
+    transform: translateX(0);
+  }
+  
+  .btn-base {
+    background-color: black;
+    color: white;
+    font-size: 1rem;
+    font-family: var(--font-body);
+    font-weight: 600;
+    min-width: fit-content;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 11px;
+    padding-bottom: 11px;
+    border-radius: 8px;
+  }
+  
+  .btn-border {
+    border-width: 2px;
+    border-color: black;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    padding-left: 14px;
+    padding-right: 14px;
+  }
+  
+  .hover-slide-bg {
+    position: relative;
+    height: fit-content;
+    color: white;
+    background-color: black;
+    border-width: 2px;
+    border-color: black;
+    overflow: hidden;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 100ms;
+  }
+  .hover-slide-bg::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    aspect-ratio: 1;
+    background-color: white;
+    transition-property: transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 200ms;
+    transform: translateX(0);
+  }
+  .hover-slide-bg:hover::before {
+    transform: translateX(100%);
+  }
+  
+  .hover-reveal-icon {
+    overflow: hidden;
+  }
+  .hover-reveal-icon::after {
+    overflow: hidden;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 100ms;
+    content: "→";
+    display: inline-block;
+    padding-left: 0.5rem;
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  .hover-reveal-icon:hover::after {
+    transform: scaleX(100%);
+  }
 }
+
 
 .goose-sprite {
   --sprite-size: 32px;
