edited components, experimented with tone canvas in hero

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,8 +73,19 @@
   --warning: var(--yellow-500);
   --warningForeground: var(--white);
 
+  /* Theme filter variables */
+  --invert-filter: 20%;
+
   --highlight-bg: var(--foreground);
   --highlight-fg: var(--background);
+
+  /* Filter variables */
+  filter: saturate(100%);
+  filter: brightness(50%);
+  filter: sepia(50%);
+  filter: contrast(50%);
+  filter: hue-rotate(45deg);
+  filter: invert(20%);
 
   overflow-x: hidden;
 }
