edited hero graphic stuff, added milk and mumure font

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,6 +124,7 @@ body {
   --font-satoshi: var(--font-satoshi);
   --font-uncut-sans: var(--font-uncut-sans);
   --font-psygen: var(--font-psygen);
+  --font-murmure: var(--font-murmure);
   --font-code7x5: var(--font-code7x5);
   --font-bp-dots-square-bold: var(--font-bp-dots-square-bold);
   --font-unifont-ex-mono: var(--font-unifont-ex-mono);
