--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,6 +105,11 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-sans), Arial, Helvetica, sans-serif;
+
+  font-size: 0.8rem;
+  letter-spacing: 0.05em;
+  line-height: 1.5;
+  margin-bottom: 1rem;
 }
 
 ::selection {
@@ -223,6 +228,26 @@ body {
 }
 
 @layer components {
+  h2 {
+    font-family: var(--font-uncut-sans);
+    font-size: 1.2rem;
+    font-weight: 800;
+    color: var(--foreground);
+    letter-spacing: 0.05em;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    font-family: var(--font-ibm-plex-mono);
+    font-family: var(--font-sans);
+    font-size: 0.8rem;
+    color: var(--foreground);
+    letter-spacing: 0.05em;
+    line-height: 1.5;
+    margin-bottom: 1rem;
+  }
+
   .navlink {
     font-family: var(--font-body);
     font-weight: 500;
