--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,7 +106,7 @@ body {
   color: var(--foreground);
   font-family: var(--font-sans), Arial, Helvetica, sans-serif;
 
-  font-size: 1rem;
+  font-size: 0.8rem;
   letter-spacing: 0.05em;
   line-height: 1.5;
   margin-bottom: 1rem;
@@ -216,16 +216,6 @@ body {
     margin-bottom: 1rem;
   }
 
-  p {
-    font-family: var(--font-ibm-plex-mono);
-    font-family: var(--font-sans);
-    font-size: 1rem;
-    color: var(--foreground);
-    letter-spacing: 0.05em;
-    line-height: 1.5;
-    margin-bottom: 1rem;
-  }
-
   blockquote {
     font-family: var(--font-ibm-plex-mono);
     color: var(--foreground);
@@ -264,26 +254,10 @@ body {
     margin-bottom: 0.5rem;
   }
 
-  table {
-    letter-spacing: 0.05em;
-    border-collapse: collapse;
-    width: 100%;
-    margin: 1rem 0;
-  }
-  table th,
-  table td {
-    border: 1px solid var(--border);
-    padding: 0.5rem;
-    text-align: left;
-  }
-  table th {
-    background-color: var(--muted);
-    font-weight: 600;
-  }
-
   /* MDX Content specific styles */
   .mdx-content p {
-    color: var(--foreground);
+    font-family: var(--font-uncut-sans);
+    font-size: 1rem;
     letter-spacing: 0.05em;
     line-height: 1.5;
     margin-bottom: 1rem;
@@ -291,10 +265,12 @@ body {
   
   .mdx-content ul {
     list-style-type: disc;
+    font-size: 1rem;
   }
 
   .mdx-content ol {
     list-style-type: decimal;
+    font-size: 1rem;
   }
 
   .mdx-content blockquote {
