--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -206,6 +206,16 @@ body {
 
 @layer base {
 
+  h1 {
+    font-family: var(--font-uncut-sans);
+    font-size: 6rem;
+    font-weight: 800;
+    color: var(--foreground);
+    letter-spacing: 0.05em;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+  }
+
   h2 {
     font-family: var(--font-uncut-sans);
     font-size: 1.2rem;
