--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
   --gray-light: #ededed;
   
   /* Blue colors */
+  --blue-300: rgb(155, 177, 255);
   --blue-500: #3b82f6;
   --blue-600: #2563eb;
   
@@ -72,6 +73,9 @@
   --successForeground: var(--white);
   --warning: var(--yellow-500);
   --warningForeground: var(--white);
+
+  --textBlendPrimary: var(--black);
+  --textBlendSecondary: var(--red);
 
   /* Theme filter variables */
   --invert: 0;
@@ -177,6 +181,9 @@ body {
   --color-success-foreground: var(--successForeground);
   --color-warning: var(--warning);
   --color-warning-foreground: var(--warningForeground);
+
+  --color-text-blend-primary: var(--textBlendPrimary);
+  --color-text-blend-secondary: var(--textBlendSecondary);
 
   /* Animations */
   --animate-text: textAnim 1s ease forwards;
@@ -485,17 +492,37 @@ body {
     animation: glitch-after 1.5s infinite alternate;
     animation: none;
   }
-  @keyframes glitch-before {
-    0%, 100% { transform: translate(-2px, 2px); }
-    25% { transform: translate(4px, -4px); }
-    50% { transform: translate(-6px, 6px); }
-    75% { transform: translate(8px, -8px); }
+  @keyframes glitch {
+    0%, 100% {
+      transform: translate(-5px, 5px)
+    }
+    24.5%, 25.5% {
+      transform: translate(-5px, -5px)
+    }
+    49.5%, 50.5% {
+      transform: translate(5px, 5px)
+    }
+    74.5%, 75.5% {
+      transform: translate(5px, -5px)
+    }
   }
-  @keyframes glitch-after {
-    0%, 100% { transform: translate(2px, -2px); }
-    25% { transform: translate(-4px, 4px); }
-    50% { transform: translate(6px, -6px); }
-    75% { transform: translate(-8px, 8px); }
+
+  @keyframes glitch-erratic {
+    0%, 24.999% {
+      transform: translate(-5px, 5px);
+    }
+    25%, 49.999% {
+      transform: translate(-5px, -5px);
+    }
+    50%, 74.999% {
+      transform: translate(5px, 5px);
+    }
+    75%, 99.999% {
+      transform: translate(5px, -5px);
+    }
+    100% {
+      transform: translate(-5px, 5px);
+    }
   }
 }
 
