--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -318,7 +318,6 @@ body {
 
 
 @layer base {
-
   h1 {
     font-family: var(--font-uncut-sans);
     font-size: 6rem;
@@ -351,7 +350,7 @@ body {
 
   h4 {
     font-family: var(--font-uncut-sans);
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-weight: 800;
     color: var(--foreground);
     letter-spacing: 0.05em;
@@ -361,7 +360,7 @@ body {
 
   h5 {
     font-family: var(--font-uncut-sans);
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 800;
     color: var(--foreground);
     letter-spacing: 0.05em;
@@ -371,12 +370,13 @@ body {
 
   h6 {
     font-family: var(--font-uncut-sans);
-    font-size: 0.8rem;
-    font-weight: 800;
+    font-size: 0.875rem;
+    font-weight: 400;
     color: var(--foreground);
     letter-spacing: 0.05em;
     line-height: 1.2;
     margin-bottom: 1rem;
+    text-transform: uppercase;
   }
 
   blockquote {
@@ -401,6 +401,8 @@ body {
     letter-spacing: 0.05em;
     margin: 1rem 0;
     padding-left: 1rem;
+    list-style-type: disc;
+    font-size: 1rem;
   }
 
   ul li {
@@ -411,6 +413,8 @@ body {
     letter-spacing: 0.05em;
     margin: 1rem 0;
     padding-left: 1.5rem;
+    list-style-type: decimal;
+    font-size: 1rem;
   }
 
   ol li {
@@ -427,16 +431,6 @@ body {
     letter-spacing: 0.05em;
     line-height: 1.5;
     margin-bottom: 1rem;
-  }
-  
-  .mdx-content ul {
-    list-style-type: disc;
-    font-size: 1rem;
-  }
-
-  .mdx-content ol {
-    list-style-type: decimal;
-    font-size: 1rem;
   }
 
   .mdx-content blockquote {
