finished three more docs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -449,7 +449,7 @@ body {
 
   .mdx-content a {
     color: var(--foreground);
-    background-color: transparent;
+    background-color: blue;
     font-weight: 600;
   }
 
