--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,10 +9,10 @@
   --gray-200: #e5e7eb;
   --gray-300: #d1d5db;
   --gray-400: #9ca3af;
-  --gray-500: #6b7280;
-  --gray-600: #40454e;
-  --gray-700: #272b30;
-  --gray-800: #1e2127;
+  --gray-500: #7e7e7e;
+  --gray-600: #4e4e4e;
+  --gray-700: #323232;
+  --gray-800: #242424;
   --gray-900: #171717;
   --gray-950: #0a0a0a;
   --gray-light: #ededed;
@@ -160,6 +160,7 @@ body {
   --font-micro5: var(--font-micro5);
   --font-archivo-black: var(--font-archivo-black);
   --font-libre-barcode-128: var(--font-libre-barcode-128);
+  --font-libre-barcode-128-text: var(--font-libre-barcode-128-text);
   
   /* Color variables */
   --color-background: var(--background);
@@ -456,6 +457,7 @@ body {
   .mdx-content a {
     color: var(--foreground);
     background-color: blue;
+    text-decoration: underline;
     font-weight: 600;
   }
 
